# gridmap_costmap

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: smooth_terrain_params.yaml
include/gridmap_costmap/: costmap_generator.hpp  gridmap_costmap_converter.hpp  terrain_analyzer.hpp
launch/: smooth_mars_simulation.launch.py
models/: mars_rover.sdf
src/: advanced_costmap_converter.cpp  costmap_generator.cpp  grid_map_integrated_converter.cpp  gridmap_costmap_converter.cpp  gridmap_costmap_converter_simple.cpp  gridmap_costmap_node.cpp  terrain_analyzer.cpp
worlds/: smooth_mars_terrain.world
